# codex-voice

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  DESIGN.md  LICENSE  PRODUCT.md  README.md  build.sh  install.sh
.impeccable/: design.json
debian/: changelog  copyright  rust-dependency-license-review.md
distribution/: codex-voice-settings  io.github.andy_spike.CodexVoice.SessionSetup.desktop  io.github.andy_spike.CodexVoice.Settings.desktop  io.github.andy_spike.CodexVoice.desktop
docs/: desktop-protocol-v1.md  glossary.md  release.md
extension/: compat.js  extension.js  metadata.json  protocol.js  protocol.test.js  stylesheet.css
packaging/: build-deb.sh  codex-asr-release.sh  codex-voice-session-setup.sh  codex-voice-ydotoold.service  deb-after-install.sh  deb-after-remove.sh  deb-postinst.sh  deb-postrm.sh  deb-preinst.sh  fetch-codex-asr.sh  inspect-deb.sh  remove-legacy-shortcut.py  test_codex_asr_integrity.sh  test_deb_lifecycle.py  test_deb_preinst.py  test_remove_legacy_shortcut.py  test_reproducible_build.sh  test_session_setup.py
schemas/: io.github.andy_spike.CodexVoice.gschema.xml
scripts/: codex-voice  gnome-custom-shortcuts.py  install.sh  test_gnome_custom_shortcuts.py  uninstall.sh
settings/: codex_voice_settings.py  electron-builder.yml  index.html  package-lock.json  package.json  playwright.config.ts  test_codex_voice_settings.py  tsconfig.electron.json  tsconfig.json  vite.config.ts  vitest.config.ts
src/: lib.rs  main.rs  overlay.py  paste_automation.rs  process_identity.rs  product_package.rs  protocol.rs  (+3 more)
(+22 files in other folders)
