[package]
name = "codex-voice"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Push-to-talk voice dictation for Linux"

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.40", features = ["bundled"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
